# python-project-83

./: .env  .flake8  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  lint.yml
page_analyzer/: __init__.py  app.py  app.py                                         Modified  app.pyy  database.sql
page_analyzer/templates/: 404.html  index.html  url_detail.html  url_details.html  url_list.html  urls.html
